--- a/css/style_new.css
+++ b/css/style_new.css
@@ -1,10 +1,16 @@
+/*GLOBAL SETTINGS*/
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@300;400;500&display=swap');
 
 * {
-    margin: 0;
-    padding: 0;
     font-family: 'Poppins', sans-serif;
+    text-decoration: none;
 }
+
+body {
+    background-color: #0f1014;
+}
+
+/*NAVBAR*/
 
 .navbar {
     position: fixed;
@@ -32,9 +38,10 @@
 
 .navbar-dark .navbar-nav .nav-link {
     font-size: 1.1rem;
-    color: rgb(255, 255, 255);
+    color: white;
 }
 
+/*NEW MARGINS*/
 
 .mt-6 {
     margin-top: 10rem !important;
@@ -42,76 +49,61 @@
 
 
 
-body {
-    background-color: #0f1014;
-}
-
-a {
-    text-decoration: none;
-}
+/*TEXT SETTINGS*/
 
 h1 {
-    color: white;
     font-family: 'Bebas Neue', sans-serif;
     font-size: 3.5rem;
-    font-weight: 400;
     margin-top: 25px;
     margin-bottom: 10px;
-    background-color: transparent;
     text-align: center;
     margin-top: 70px;
     margin-bottom: 60px;
 }
 
 h2 {
-    color: #ffffff;
     font-size: 1.8rem;
-    font-weight: 500;
     margin-top: 20px;
     margin-bottom: 20px;
-    background-color: transparent;
 }
 
 h3 {
-    color: white;
-    font-family: 'Poppins', sans-serif;
     font-size: 1.2rem;
-    font-weight: 400;
     margin-top: 25px;
     margin-bottom: 10px;
-    background-color: transparent;
 }
 
 h4 {
-    color: rgb(0, 0, 0);
-    font-family: 'Poppins', sans-serif;
     font-size: 1.5rem;
-    font-weight: 400;
     margin-top: 0px;
     margin-bottom: 25px;
-    background-color: transparent;
 }
 
 h5 {
-    color: black;
-    font-family: 'Poppins', sans-serif;
     font-size: 1rem;
     margin: 5px;
 }
 
-.whiteText-1 {
+a {
+    text-decoration: none;
+}
+
+.whiteText{
     color: white;
-    font-family: 'Poppins', sans-serif;
-    font-size: 1rem;
-    font-weight: 400;
-    margin-top: 10px;
-    margin-bottom: 10px;
     background-color: transparent;
 }
+
+.blackText{
+    color: black;
+}
+
+.fWeight-1{
+    font-weight: 500;
+}
+
+
 
 .desText {
-    color: white;
-    font-family: 'Poppins', sans-serif;
     font-size: 1rem;
     font-weight: 400;
     margin-top: 10px;
@@ -119,7 +111,7 @@ h5 {
     background-color: transparent;
 }
 
-/*Background Images*/
+/*BACKGROUND IMAGES*/
 
 .side-image {
     position: fixed;
@@ -146,7 +138,7 @@ h5 {
 }
 
 
-/*Demo Reel*/
+/*DEMO REEL*/
 
 .videoSection {
     width: 90%;
@@ -173,7 +165,7 @@ h5 {
 }
 
 
-/*Resume Page*/
+/*RESUME PAGE*/
 .aboutImg {
     width: 85%;
     border-radius: 200px 200px 200px 200px;
@@ -197,7 +189,7 @@ h5 {
     height: 100%;
 }
 
-/*Contact page*/
+/*CONTACT PAGE*/
 
 .center-form {
     display: flex;
@@ -205,9 +197,9 @@ h5 {
     height: 100vh;
 }
 
-/*Footer*/
+/*FOOTER*/
 footer {
-    background-color: #0f1014;
+    background-color: #1C252A;
     padding: 20px 0;
 }
 
