--- a/css/style_new.css
+++ b/css/style_new.css
@@ -1,235 +1,258 @@
 /*GLOBAL SETTINGS*/
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@300;400;500&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@300;400;500&display=swap");
+/*Color de fuentes*/
+/*Fuentes*/
+/*Backgorund Color*/
 * {
-    font-family: 'Poppins', sans-serif;
-    text-decoration: none;
+  text-decoration: none;
 }
 
 body {
-    background-color: #0f1014;
+  background-color: #0f1014;
 }
 
 /*NAVBAR*/
-
 .navbar {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 1000;
-    background-color: #081420;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
+  background-color: #081420;
 }
 
 .nav-link {
-    color: white;
+  color: white;
 }
 
 .nav-link:hover {
-    color: rgba(255, 255, 255, 0.5);
+  color: rgba(255, 255, 255, 0.5);
 }
 
 .navbar-brand img {
-    max-height: 50px;
+  max-height: 50px;
 }
 
 .navbar-nav .nav-item {
-    text-align: center;
+  text-align: center;
 }
 
 .navbar-dark .navbar-nav .nav-link {
-    font-size: 1.1rem;
-    color: white;
+  font-size: 1.1rem;
+  color: white;
 }
 
 /*NEW MARGINS*/
-
 .mt-6 {
-    margin-top: 10rem !important;
+  margin-top: 10rem !important;
 }
 
-
-
 /*TEXT SETTINGS*/
-
 h1 {
-    font-family: 'Bebas Neue', sans-serif;
-    font-size: 3.5rem;
-    margin-top: 25px;
-    margin-bottom: 10px;
-    text-align: center;
-    margin-top: 70px;
-    margin-bottom: 60px;
+  color: white;
+  font-family: "Bebas Neue", sans-serif;
+  font-size: 3.5rem;
+  margin-top: 25px;
+  margin-bottom: 10px;
+  text-align: center;
+  margin-top: 70px;
+  margin-bottom: 60px;
 }
 
 h2 {
-    font-size: 1.8rem;
-    margin-top: 20px;
-    margin-bottom: 20px;
+  color: white;
+  font-family: "Poppins", sans-serif;
+  font-size: 1.8rem;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 h3 {
-    font-size: 1.2rem;
-    margin-top: 25px;
-    margin-bottom: 10px;
+  color: white;
+  font-family: "Poppins", sans-serif;
+  font-size: 1.2rem;
+  margin-top: 25px;
+  margin-bottom: 10px;
 }
 
 h4 {
-    font-size: 1.5rem;
-    margin-top: 0px;
-    margin-bottom: 25px;
+  font-size: 1.5rem;
+  margin-top: 0px;
+  margin-bottom: 25px;
 }
 
 h5 {
-    font-size: 1rem;
-    margin: 5px;
+  font-size: 1rem;
+  margin: 5px;
+}
+
+h6 {
+  color: white;
+  font-family: "Poppins", sans-serif;
+}
+
+p {
+  color: white;
+  font-family: "Poppins", sans-serif;
+}
+
+li {
+  color: white;
+  font-family: "Poppins", sans-serif;
 }
 
 a {
-    text-decoration: none;
+  color: black;
+  font-family: "Poppins", sans-serif;
+  text-decoration: none;
 }
 
-.whiteText{
-    color: white;
-    background-color: transparent;
+label {
+  color: white;
+  font-family: "Poppins", sans-serif;
 }
 
-.blackText{
-    color: black;
+.fWeight-1 {
+  font-weight: 500;
 }
-
-.fWeight-1{
-    font-weight: 500;
-}
-
-
 
 .desText {
-    font-size: 1rem;
-    font-weight: 400;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    background-color: transparent;
+  font-size: 1rem;
+  font-weight: 400;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 /*BACKGROUND IMAGES*/
-
 .side-image {
-    position: fixed;
-    top: 0;
-    height: 100vh;
-    z-index: -1;
+  position: fixed;
+  top: 0;
+  height: 100vh;
+  z-index: -1;
 }
 
 .left-image {
-    margin-left: 0px;
-    left: 0;
+  margin-left: 0px;
+  left: 0;
 }
 
 .right-image {
-    margin-right: 0px;
-    right: 0;
+  margin-right: 0px;
+  right: 0;
 }
 
 @media (max-width: 920px) {
-
-    .side-image {
-        display: none;
-    }
+  .side-image {
+    display: none;
+  }
 }
-
-
 /*DEMO REEL*/
-
 .videoSection {
-    width: 90%;
-    height: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 90%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
-.videoWrapper {
-    position: relative;
-    overflow: hidden;
-    width: 100%;
-    padding-top: 56.25%;
+.videoSection .videoWrapper {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  padding-top: 56.25%;
 }
-
-.videoWrapper iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border: 0;
+.videoSection .videoWrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
 }
-
 
 /*RESUME PAGE*/
 .aboutImg {
-    width: 85%;
-    border-radius: 200px 200px 200px 200px;
+  width: 85%;
+  border-radius: 200px 200px 200px 200px;
 }
 
 /*THE ANIMVIEWPOINT*/
-
 .card {
-    background-color: #c1d3df;
-    margin: 30px;
-    padding-bottom: 15px;
-    box-shadow: 0px 0px 14px 6px rgba(255, 255, 255, 0.7)
+  background-color: #c1d3df;
+  margin: 30px;
+  padding-bottom: 15px;
+  box-shadow: 0px 0px 14px 6px rgba(255, 255, 255, 0.7);
 }
-
-.card-body {
-    overflow: hidden;
+.card .card-body {
+  overflow: hidden;
 }
-
-.card-img-top {
-    object-fit: cover;
-    height: 100%;
+.card .card-img-top {
+  object-fit: cover;
+  height: 100%;
 }
 
 /*CONTACT PAGE*/
-
 .center-form {
-    display: flex;
-    justify-content: center;
-    height: 100vh;
+  display: flex;
+  justify-content: center;
+  height: 100vh;
+}
+
+.subButton {
+  color: white;
+  background-color: #112a43;
+  border-color: #112a43;
+}
+
+.subButton:hover {
+  color: #fff;
+  background-color: #1e4e7e;
+  border-color: #1e4e7e;
+}
+
+.resButton {
+  color: white;
+  background-color: #1C252A;
+  border-color: #1C252A;
+}
+
+.resButton:hover {
+  color: #fff;
+  background-color: #3b4e58;
+  border-color: #3b4e58;
 }
 
 /*FOOTER*/
 footer {
-    background-color: #1C252A;
-    padding: 20px 0;
+  background-color: #1C252A;
+  padding: 20px 0;
 }
 
 footer section {
-    text-align: center;
+  text-align: center;
 }
 
 footer h3 {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 footer a {
-    color: #000;
-    margin: 0 10px;
+  margin: 0 10px;
 }
 
-
 footer p {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 footer iframe {
-    width: 60%;
-    height: 60%;
-    margin: 0 auto;
-    display: block;
+  width: 60%;
+  height: 60%;
+  margin: 0 auto;
+  display: block;
 }
 
 .fa-linkedin,
 .fa-instagram {
-    color: white;
-    font-size: 2rem;
+  color: white;
+  font-size: 2rem;
 }
+
+/*# sourceMappingURL=style_new.css.map */
