--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,6 +1,6 @@
 /*Color de fuentes*/
 $colorFuente1: white;
-$colorFuente2: black;
+$colorFuente2: #0f1014;
 
 /*Fuentes*/
 $titleFont: 'Bebas Neue', sans-serif;
