--- a/sass/style_new.scss
+++ b/sass/style_new.scss
@@ -1,6 +1,7 @@
 /*GLOBAL SETTINGS*/
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@300;400;500&display=swap');
 @import 'variables';
+@import 'hover_animations';
 @import 'mixin';
 @import 'reset';
 @import 'header';
