--- a/css/style_new.css
+++ b/css/style_new.css
@@ -3,6 +3,46 @@
 /*Color de fuentes*/
 /*Fuentes*/
 /*Backgorund Color*/
+/*NAVBAR*/
+.nav-link:hover {
+  color: white !important;
+  text-shadow: 0 1px 2px rgba(255, 255, 255, 0.5);
+  transform: translateY(-2px);
+  transition: all 0.2s ease;
+}
+
+.navbar-brand img:hover {
+  scale: 1.1;
+  transition: all 0.2s ease;
+}
+
+/*THE ANIMVIEWPOINT*/
+.card:hover {
+  scale: 1.02;
+  transition: all 0.5s ease;
+  box-shadow: 0px 0px 20px 12px rgba(255, 255, 255, 0.7);
+}
+
+a:hover {
+  color: rgb(40, 40, 40);
+}
+
+/*FOOTER*/
+.footerHover:hover {
+  color: rgb(255, 255, 255);
+  scale: 1.05;
+  transition: transform 0.3s ease;
+  animation: jump 0.5s infinite alternate;
+}
+
+@keyframes jump {
+  0%, 100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-2px);
+  }
+}
 * {
   text-decoration: none;
 }
@@ -22,14 +62,12 @@ body {
 
 .nav-link {
   color: white;
-}
-
-.nav-link:hover {
-  color: rgba(255, 255, 255, 0.5);
+  transition: all 0.5s ease;
 }
 
 .navbar-brand img {
   max-height: 50px;
+  transition: all 0.5s ease;
 }
 
 .navbar-nav .nav-item {
@@ -101,7 +139,7 @@ li {
 }
 
 a {
-  color: black;
+  color: #0f1014;
   font-family: "Poppins", sans-serif;
   text-decoration: none;
 }
@@ -180,6 +218,7 @@ label {
   margin: 30px;
   padding-bottom: 15px;
   box-shadow: 0px 0px 14px 6px rgba(255, 255, 255, 0.7);
+  transition: all 0.5s ease;
 }
 .card .card-body {
   overflow: hidden;
@@ -253,6 +292,7 @@ footer iframe {
 .fa-instagram {
   color: white;
   font-size: 2rem;
+  transition: all 0.5s ease;
 }
 
 /*# sourceMappingURL=style_new.css.map */
