--- a/sass/_theanim_page.scss
+++ b/sass/_theanim_page.scss
@@ -5,6 +5,7 @@
     margin: 30px;
     padding-bottom: 15px;
     box-shadow: 0px 0px 14px 6px rgba(255, 255, 255, 0.7);
+    transition: all 0.5s ease;
 
     .card-body {
         overflow: hidden;
@@ -15,3 +16,4 @@
         height: 100%;
     }
 }
+
